# movim_electron

./: .gitignore  CMakeLists.txt  README.md  main.js  package-lock.json  package.json  package.sh  style.css
debian/: movim.desktop  postinst  postrm
movim/: browser.js  error.html  error.js  main.js  package-lock.json  package.json  style.css
movim/img/: logo.icns
